--- a/.classpath
+++ b/.classpath
@@ -6,10 +6,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="src/ojdbc8.jar">
+	<classpathentry kind="lib" path="src/ojdbc8.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/flatlaf-2.3.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
